# edge2-npu

Android/rknn_face_retinaface_android_apk_demo/: settings.gradle
Android/rknn_face_retinaface_android_apk_demo/app/: build.gradle
Android/rknn_face_retinaface_android_apk_demo/app/src/androidTest/java/com/wesion/demo/: ExampleInstrumentedTest.java
Android/rknn_face_retinaface_android_apk_demo/app/src/main/: AndroidManifest.xml
Android/rknn_face_retinaface_android_apk_demo/app/src/main/cpp/: CMakeLists.txt  native-lib.cc
Android/rknn_face_retinaface_android_apk_demo/app/src/main/cpp/include/: facenet.cc  retinaface.cc  retinaface.h
Android/rknn_face_retinaface_android_apk_demo/app/src/main/java/com/wesion/demo/: DetectResultGroup.java  FaceRecognition.java  IdentifyActivity.java  MainActivity.java  RegisterActivity.java
Android/rknn_face_retinaface_android_apk_demo/app/src/main/res/layout/: activity_identify.xml  activity_main.xml  activity_register.xml
Android/rknn_face_retinaface_android_apk_demo/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
Android/rknn_face_retinaface_android_apk_demo/app/src/main/res/values-night/: themes.xml
Android/rknn_face_retinaface_android_apk_demo/app/src/test/java/com/wesion/demo/: ExampleUnitTest.java
Android/rknn_face_retinaface_android_apk_demo/gradle/: libs.versions.toml
Android/rknn_face_retinaface_android_apk_demo/gradle/wrapper/: gradle-wrapper.properties
Android/rknn_retinaface_android_apk_demo/app/: CMakeLists.txt
Android/rknn_retinaface_android_apk_demo/app/src/main/: AndroidManifest.xml
Android/rknn_retinaface_android_apk_demo/app/src/main/cpp/: native-lib.cc  post_process.cc  retinaface_image.cc  retinaface_image.h
Android/rknn_retinaface_android_apk_demo/app/src/main/java/com/rockchip/gpadc/demo/: CameraPreviewActivity.java  InferenceResult.java
Android/rknn_retinaface_android_apk_demo/app/src/main/java/com/rockchip/gpadc/demo/retinaface/: InferenceWrapper.java
Android/rknn_retinaface_android_apk_demo/app/src/main/java/com/rockchip/gpadc/demo/rga/: HALDefine.java
Android/rknn_retinaface_android_apk_demo/app/src/main/res/values/: strings.xml
Android/rknn_yolov8_android_apk_demo/app/src/main/cpp/: post_process.cc
Android/rknn_yolov8_android_apk_demo/app/src/main/java/com/rockchip/gpadc/demo/: CameraPreviewActivity.java
Android/rknn_yolov8_android_apk_demo/app/src/main/res/layout/: activity_main.xml
